Upload v1 excel processing application

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,12 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+.idea/
 build/
 develop-eggs/
 dist/
 downloads/
+uploads/
 eggs/
 .eggs/
 lib/
